--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8081
+
 
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/daos2024?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/amor_ceballos_espindola_martin?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=tsti
+spring.datasource.password=root
 
 
